Almost done with INQ design section

--- a/Tadashi_Refs.bib
+++ b/Tadashi_Refs.bib
@@ -395,3 +395,221 @@ url = {http://arxiv.org/abs/2106.03872},
 year = {2021}
 }
 
+@article{NWChem2013,
+  title={Noniterative multireference coupled cluster methods on heterogeneous CPU--GPU systems},
+  author={Bhaskaran-Nair, Kiran and Ma, Wenjing and Krishnamoorthy, Sriram and Villa, Oreste and van Dam, Hubertus JJ and Aprà, Edoardo and Kowalski, Karol},
+  journal={Journal of chemical theory and computation},
+  volume={9},
+  number={4},
+  pages={1949--1957},
+  year={2013},
+  publisher={ACS Publications}
+}
+
+@article{BigDFT2018,
+	doi = {10.1088/1361-648x/aaa8c9},
+	url = {https://doi.org/10.1088/1361-648x/aaa8c9},
+	year = 2018,
+	month = {feb},
+	publisher = {{IOP} Publishing},
+	volume = {30},
+	number = {9},
+	pages = {095901},
+	author = {Laura E Ratcliff and A Degomme and Jos{\'{e}} A Flores-Livas and Stefan Goedecker and Luigi Genovese},
+	title = {Affordable and accurate large-scale hybrid-functional calculations on {GPU}-accelerated supercomputers},
+	journal = {Journal of Physics: Condensed Matter},
+	abstract = {Performing high accuracy hybrid functional calculations for condensed matter systems containing a large number of atoms is at present computationally very demanding or even out of reach if high quality basis sets are used. We present a highly optimized multiple graphics processing unit implementation of the exact exchange operator which allows one to perform fast hybrid functional density-functional theory (DFT) calculations with systematic basis sets without additional approximations for up to a thousand atoms. With this method hybrid DFT calculations of high quality become accessible on state-of-the-art supercomputers within a time-to-solution that is of the same order of magnitude as traditional semilocal-GGA functionals. The method is implemented in a portable open-source library.}
+}
+
+@article{vasp2012,
+  title={VASP on a GPU: Application to exact-exchange calculations of the stability of elemental boron},
+  author={Hutchinson, Maxwell and Widom, Michael},
+  journal={Computer Physics Communications},
+  volume={183},
+  number={7},
+  pages={1422--1426},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{vasp2012b,
+  title={Accelerating VASP electronic structure calculations using graphic processing units},
+  author={Hacene, Mohamed and Anciaux-Sedrakian, Ani and Rozanska, Xavier and Klahr, Diego and Guignon, Thomas and Fleurat-Lessard, Paul},
+  journal={Journal of computational chemistry},
+  volume={33},
+  number={32},
+  pages={2581--2589},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+
+@article{vasp2019,
+  title={VASP hits the memory wall: Processors efficiency comparison},
+  author={Stegailov, Vladimir and Smirnov, Grigory and Vecher, Vyacheslav},
+  journal={Concurrency and Computation: Practice and Experience},
+  volume={31},
+  number={19},
+  pages={e5136},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{vasp2018,
+  title={Strategies to accelerate VASP with GPUs using open ACC},
+  author={Maintz, Stefan and Wetzstein, Markus},
+  booktitle={Proceedings of the Cray User Group},
+  year={2018}
+}
+
+@inproceedings{QE2017,
+  title={A performance study of Quantum ESPRESSO’s PWscf code on multi-core and GPU systems},
+  author={Romero, Joshua and Phillips, Everett and Ruetsch, Gregory and Fatica, Massimiliano and Spiga, Filippo and Giannozzi, Paolo},
+  booktitle={International Workshop on Performance Modeling, Benchmarking and Simulation of High Performance Computer Systems},
+  pages={67--87},
+  year={2017},
+  organization={Springer}
+}
+
+@article{QE2020,
+  title={Quantum ESPRESSO toward the exascale},
+  author={Giannozzi, Paolo and Baseggio, Oscar and Bonf{\`a}, Pietro and Brunato, Davide and Car, Roberto and Carnimeo, Ivan and Cavazzoni, Carlo and De Gironcoli, Stefano and Delugas, Pietro and Ferrari Ruffino, Fabrizio and others},
+  journal={The Journal of chemical physics},
+  volume={152},
+  number={15},
+  pages={154105},
+  year={2020},
+  publisher={AIP Publishing LLC}
+}
+
+@article{andrade2012time,
+  title={Time-dependent density-functional theory in massively parallel computer architectures: the octopus project},
+  author={Andrade, Xavier and Alberdi-Rodriguez, Joseba and Strubbe, David A and Oliveira, Micael JT and Nogueira, Fernando and Castro, Alberto and Muguerza, Javier and Arruabarrena, Agustin and Louie, Steven G and Aspuru-Guzik, Al{\'a}n and others},
+  journal={Journal of Physics: Condensed Matter},
+  volume={24},
+  number={23},
+  pages={233202},
+  year={2012},
+  publisher={IOP Publishing}
+}
+
+@article{andrade2013real,
+  title={Real-space density functional theory on graphical processing units: computational approach and comparison to gaussian basis set methods},
+  author={Andrade, Xavier and Aspuru-Guzik, Al{\'a}n},
+  journal={Journal of chemical theory and computation},
+  volume={9},
+  number={10},
+  pages={4360--4373},
+  year={2013},
+  publisher={ACS Publications}
+}
+
+@article{SparcX2021,
+title = {SPARC: Simulation Package for Ab-initio Real-space Calculations},
+journal = {SoftwareX},
+volume = {15},
+pages = {100709},
+year = {2021},
+issn = {2352-7110},
+doi = {https://doi.org/10.1016/j.softx.2021.100709},
+url = {https://www.sciencedirect.com/science/article/pii/S2352711021000546},
+author = {Qimen Xu and Abhiraj Sharma and Benjamin Comer and Hua Huang and Edmond Chow and Andrew J. Medford and John E. Pask and Phanish Suryanarayana},
+keywords = {Kohn–Sham, Density functional theory, Electronic structure, Real-space, Finite-differences},
+abstract = {We present SPARC: Simulation Package for Ab-initio Real-space Calculations. SPARC can perform Kohn–Sham density functional theory calculations for isolated systems such as molecules as well as extended systems such as crystals and surfaces, in both static and dynamic settings. It is straightforward to install/use and highly competitive with state-of-the-art planewave codes, demonstrating comparable performance on a small number of processors and increasing advantages as the number of processors grows. Notably, SPARC brings solution times down to a few seconds for systems with O(100–500) atoms on large-scale parallel computers, outperforming planewave counterparts by an order of magnitude and more.}
+}
+
+@InProceedings{heFFTe2020,
+author="Ayala, Alan
+and Tomov, Stanimire
+and Haidar, Azzam
+and Dongarra, Jack",
+editor="Krzhizhanovskaya, Valeria V.
+and Z{\'a}vodszky, G{\'a}bor
+and Lees, Michael H.
+and Dongarra, Jack J.
+and Sloot, Peter M. A.
+and Brissos, S{\'e}rgio
+and Teixeira, Jo{\~a}o",
+title="heFFTe: Highly Efficient FFT for Exascale",
+booktitle="Computational Science -- ICCS 2020",
+year="2020",
+publisher="Springer International Publishing",
+address="Cham",
+pages="262--275",
+abstract="Exascale computing aspires to meet the increasing demands from large scientific applications. Software targeting exascale is typically designed for heterogeneous architectures; henceforth, it is not only important to develop well-designed software, but also make it aware of the hardware architecture and efficiently exploit its power. Currently, several and diverse applications, such as those part of the Exascale Computing Project (ECP) in the United States, rely on efficient computation of the Fast Fourier Transform (FFT). In this context, we present the design and implementation of heFFTe (Highly Efficient FFT for Exascale) library, which targets the upcoming exascale supercomputers. We provide highly (linearly) scalable GPU kernels that achieve more than {\$}{\$}40{\{}{\backslash}times {\}}{\$}{\$}speedup with respect to local kernels from CPU state-of-the-art libraries, and over {\$}{\$}2{\{}{\backslash}times {\}}{\$}{\$}speedup for the whole FFT computation. A communication model for parallel FFTs is also provided to analyze the bottleneck for large-scale problems. We show experiments obtained on Summit supercomputer at Oak Ridge National Laboratory, using up to 24,576 IBM Power9 cores and 6,144 NVIDIA V-100 GPUs.",
+isbn="978-3-030-50371-0"
+}
+
+@misc{andrade2021inq,
+      title={INQ, a modern GPU-accelerated computational framework for (time-dependent) density functional theory}, 
+      author={Xavier Andrade and Chaitanya Das Pemmaraju and Alexey Kartsev and Jun Xiao and Aaron Lindenberg and Sangeeta Rajpurohit and Liang Z. Tan and Tadashi Ogitsu and Alfredo A. Correa},
+      year={2021},
+      eprint={2106.03872},
+      archivePrefix={arXiv},
+      primaryClass={cond-mat.mtrl-sci}
+}
+
+
+@article{Qiao2020,
+	title = {Photoinduced {Dynamics} of {Charge} {Carriers} in {Metal} {Halide} {Perovskites} from an {Atomistic} {Perspective}},
+	volume = {11},
+	url = {https://doi.org/10.1021/acs.jpclett.0c01687},
+	doi = {10.1021/acs.jpclett.0c01687},
+	number = {17},
+	urldate = {2021-05-24},
+	journal = {The Journal of Physical Chemistry Letters},
+	author = {Qiao, Lu and Fang, Wei-Hai and Long, Run and Prezhdo, Oleg V.},
+	month = sep,
+	year = {2020},
+	note = {Publisher: American Chemical Society},
+	pages = {7066--7082}
+}
+
+@article{Abramovitch2021,
+	title = {Carrier localization induced by dynamic disorder in {MAPbI3} described by first-principles based tight binding},
+	url = {http://arxiv.org/abs/2105.06525},
+	abstract = {Halide perovskites are strongly influenced by large amplitude anharmonic lattice fluctuations at room temperature. We develop a tight binding model for dynamically disordered MAPbI\$\_3\$ based on density functional theory (DFT) calculations to calculate electronic structure for finite temperature crystal structures at the length scale of thermal disorder and carrier localization. The model predicts individual Hamiltonian matrix elements and band structures with high accuracy, owing to the inclusion of additional matrix elements and descriptors for non-Coulombic interactions. We apply the model to electronic structure calculations in supercells up to 16 \${\textbackslash}times\$ 16 \${\textbackslash}times\$ 16, observing the onset of carrier localization induced by thermal disorder at 300 K, associated with decreasing band edge fluctuations, increasing carrier mass, and Rashba splitting approaching zero. We identify the length scale \$L{\textasciicircum}*= 5\$ nm at which local electronic structure is affected by dynamic disorder.},
+	urldate = {2021-05-28},
+	journal = {arXiv:2105.06525 [cond-mat]},
+	author = {Abramovitch, David J. and Saidi, Wissam A. and Tan, Liang Z.},
+	month = may,
+	year = {2021},
+	note = {arXiv: 2105.06525},
+	keywords = {Condensed Matter - Materials Science}
+}
+
+
+@article{Mostofi2008,
+	title = {Wannier90: {A} {Tool} for {Obtaining} {Maximally}-{Localised} {Wannier} {Functions}},
+	volume = {178},
+	journal = {Comput. Phys. Commun.},
+	author = {Mostofi, A. A. and Yates, J. R. and Lee, Y.-S. and Souza, I. and Vanderbilt, D. and Marzari, N.},
+	year = {2008},
+	pages = {685}
+}
+
+
+@article{Smart2021,
+	title = {Enhancing {Defect} {Tolerance} with {Ligands} at the {Surface} of {Lead} {Halide} {Perovskites}},
+	journal = {Under review},
+	author = { Smart, Tyler and Takenaka, Hiroyuki and Pham, Anh and Tan, Liang Z. and Zhang, Jin and Ogitsu, Tadashi and Ping, Yuan},
+	year = {2021}
+}
+
+
+
+@article{Yost2019,
+	title = {Propagation of maximally localized {Wannier} functions in real-time {TDDFT}},
+	volume = {150},
+	issn = {0021-9606},
+	url = {https://aip.scitation.org/doi/10.1063/1.5095631},
+	doi = {10.1063/1.5095631},
+	number = {19},
+	urldate = {2021-06-10},
+	journal = {The Journal of Chemical Physics},
+	author = {Yost, Dillon C. and Yao, Yi and Kanai, Yosuke},
+	month = may,
+	year = {2019},
+	note = {Publisher: American Institute of Physics},
+	pages = {194113}
+}
